--- a/README
+++ b/README
@@ -17,7 +17,7 @@ SYNOPSIS
 
            $stream->configure(
               on_read => sub {
-                 my ( $self, $buffref, $closed ) = @_;
+                 my ( $self, $buffref, $eof ) = @_;
 
                  return 0 unless( $buffref =~ s/^(.*\n)// );
 
