--- a/README
+++ b/README
@@ -19,11 +19,11 @@ SYNOPSIS
               on_read => sub {
                  my ( $self, $buffref, $eof ) = @_;
 
-                 return 0 unless( $buffref =~ s/^(.*\n)// );
+                 while( $buffref =~ s/^(.*\n)// ) {
+                    print "Received a line $1";
+                 }
 
-                 print "Received a line $1";
-
-                 return 1;
+                 return 0;
               }
            );
 
